--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Date: 2021-01-26
 Author: Yuanqing Yan
 Maintainer: Yuanqing Yan <yuanqing.yan@uth.tmc.edu>
 Description: Evaluate the differential cooccurrence or mutual exclusivity of binary genomic alteration data between two different conditions. 
-Dependends: R(>=4.0.2),logistf,plotrix,devtools,roxygens,knitr
+Depends: R(>=4.0.2),logistf,plotrix,devtools,roxygens,knitr
 License: GPL-2
 Encoding: UTF-8
 LazyData: true
